<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowData"
    android:orientation="vertical"
    android:padding="@dimen/container_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_data"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/header_bottom_margin"/>

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_fullname"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/item_margin_bottom"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_margin_bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formBirthday"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/item_margin_right"
            android:layout_marginEnd="@dimen/item_margin_right" />

        <TextView
            android:id="@+id/tvBirthDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_margin_bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formPhone"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/item_margin_right"
            android:layout_marginEnd="@dimen/item_margin_right"/>

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_margin_bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formEmail"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/item_margin_right"
            android:layout_marginEnd="@dimen/item_margin_right"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_email" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_margin_bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formDescription"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/item_margin_right"
            android:layout_marginEnd="@dimen/item_margin_right"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_description" />
    </LinearLayout>

    <Button
        android:id="@+id/bEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editData"
        android:layout_marginBottom="@dimen/item_margin_bottom"/>
</LinearLayout>